GUI: cleanup
* improving encapsulation and code style
* separate PatchViewSwing/PatchViewPiccolo ArrayViews
* cleanup ChunkData
* enforcing unmodifiableList